--- a/views/add-product.ejs
+++ b/views/add-product.ejs
@@ -24,8 +24,9 @@
                 <label for="price">Price</label>
                 <input type="text" name="price" id="price">
             </div>
-            
-            <button type="submit">Add Book</button>
+            <div class="btn">
+                <button type="submit">Add Book</button>
+            </div>
         </form>
     </main>
 <%- include('includes/end.ejs') %>
