--- a/views/remove-product.ejs
+++ b/views/remove-product.ejs
@@ -17,7 +17,9 @@
                     <% } %>
                 </select>
             </div>
-            <button type="submit">Remove Book</button>
+            <div class="btn">
+                <button type="submit">Remove Book</button>
+            </div>
         </form>
     </main>
 
