--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -6,9 +6,7 @@
     <%- include('includes/navigation.ejs') %>
 
     <main>
-       
         <h1>Books</h1>
-
         <% if (prods.length > 0) { %>
             <div class="grid">
                 <% for (let product of prods) { %>
@@ -22,19 +20,18 @@
                                 alt="A Book">
                         </div>
                         <div class="card__content">
-                            <h2 class="product__price"><%= product.price %></h2>
+                            <h2 class="product__price">$<%= product.price %></h2>
                             <p class="product__description"><%= product.description %></p>
                         </div>
                         <div class="card__actions">
-                            <button class="btn">Add to Cart</button>
+                            <button>Add to Cart</button>
                         </div>
                     </article>
                 <% } %>
             </div>
         <% } else { %>
             <h1>No Books Found!</h1>
-        <% } %>
-        
-        
+        <% } %>  
     </main>
+    
 <%- include('includes/end.ejs')%>
