--- a/public/css/product.css
+++ b/public/css/product.css
@@ -4,7 +4,8 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    grid-row-gap: 2rem;
+    row-gap: 2rem;
+    column-gap: 2rem;
 }
 
 .card {
