--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -5,7 +5,7 @@
 
 <body>
     <%- include('../includes/navigation.ejs') %>
-
+    <h1><% if (editing) { %>Edit Product<% } else { %>Add Product<% } %></h1>
     <main>
         <form class="product-form" action="/admin/<% if (editing) { %>/edit-product<% } else {%>/add-product<% } %>" method="POST">
             <div class="form-control">
