--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -29,7 +29,7 @@
                 <input type="number" name="price" id="price" step="0.01" value="<% if (editing) { %><%= product.price %><% } %>">
             </div>
             <% if (editing) { %>
-                <input type="hidden" value="<%= product.id %>" name="productId">
+                <input type="hidden" value="<%= product._id %>" name="productId">
             <% } %>
 
             <div class="btn-center">
