--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -33,6 +33,7 @@
             <% } %>
 
             <div class="btn-center">
+                <input type="hidden" name="_csrf" value="<%= csrfToken %>"> 
                 <button class="btn" type="submit"><% if (editing) { %>Update Product<% } else { %>Add Product<% } %></button>
             </div>
         </form>
