--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -26,6 +26,7 @@
                         <div class="card__actions">
                             <a class="btn" href="/admin/edit-product/<%= product._id %>?edit=true">Edit</a>
                             <form action="/admin/delete-product" method="POST">
+                                <input type="hidden" name="_csrf" value="<%= csrfToken %>"> 
                                 <input type="hidden" value="<%= product._id %>" name="productId">
                                 <button class="btn">Delete</button>
                             </form>
