--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -11,12 +11,16 @@
         <% } %>
         <form class="login-form" action="/signup" method="POST">
             <div class="form-control">
-                <label for="email">Email</label>
-                <input type="text" name="email" id="email">
+                <label for="firstName">First Name</label>
+                <input type="text" name="firstName" id="firstName">
             </div>
             <div class="form-control">
-                <label for="username">Username</label>
-                <input type="text" name="username" id="username">
+                <label for="lastName">Last Name</label>
+                <input type="text" name="lastName" id="lastName">
+            </div>
+            <div class="form-control">
+                <label for="email">Email</label>
+                <input type="text" name="email" id="email">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
