--- a/public/css/form.css
+++ b/public/css/form.css
@@ -40,3 +40,8 @@
     font-family: inherit;
     padding: .5rem;
 }
+
+.form-control input.invalid,
+.form-control textarea.invalid {
+    border-color: red;
+}
