--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -9,26 +9,30 @@
         <% if (errorMessage) { %>
             <div class="user-message user-message--error"><%= errorMessage %></div>
         <% } %>
-        <form class="login-form" action="/signup" method="POST">
+        <form class="login-form" action="/signup" method="POST" novalidate>
             <div class="form-control">
                 <label for="firstName">First Name</label>
-                <input type="text" name="firstName" id="firstName">
+                <input type="text" name="firstName" id="firstName" value="<%= oldInput.firstName %>">
             </div>
             <div class="form-control">
                 <label for="lastName">Last Name</label>
-                <input type="text" name="lastName" id="lastName">
+                <input type="text" name="lastName" id="lastName" value="<%= oldInput.lastName %>">
             </div>
             <div class="form-control">
                 <label for="email">Email</label>
-                <input type="text" name="email" id="email">
+                <input
+                    class="<%= validationErrors.find(e => e.param === 'email') ? 'invalid' : '' %>" 
+                    type="email" name="email" id="email" value="<%= oldInput.email %>">
             </div>
             <div class="form-control">
                 <label for="password">Password</label>
-                <input type="password" name="password" id="password">
+                <input class="<%= validationErrors.find(e => e.param === 'password') ? 'invalid' : '' %>"
+                    type="password" name="password" id="password" value="<%= oldInput.password %>">
             </div>
             <div class="form-control">
                 <label for="password">Confirm Password</label>
-                <input type="password" name="confirmPassword" id="password">
+                <input class="<%= validationErrors.find(e => e.param === 'donfirmPassword') ? 'invalid' : '' %>"
+                    type="password" name="confirmPassword" id="password" value="<%= oldInput.confirmPassword %>">
             </div>
             <div class="btn-center">
                 <input type="hidden" name="_csrf" value="<%= csrfToken %>"> 
