--- a/views/404.ejs
+++ b/views/404.ejs
@@ -3,7 +3,8 @@
     <%- include('includes/navigation.ejs')%>
 
     <main>
-        <h1>Page Not Found!</h1>
+        <h1 class="centered">Oops!</h1>
+        <p class="centered">That page cannot be found.</p>
     </main>
 </body>
 </html>
