--- a/views/500.ejs
+++ b/views/500.ejs
@@ -3,8 +3,8 @@
     <%- include('includes/navigation.ejs')%>
 
     <main>
-        <h1>Something went wrong!</h1>
-        <p>Please try again later.</p>
+        <h1>Something went wrong on our end!</h1>
+        <h3 class="centered">Please try again later.</h3>
     </main>
 </body>
 </html>
