--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -1,13 +1,14 @@
 <div class="backdrop"></div>
 <header class="main-header">
     <button id="side-menu-toggle">Menu</button>
+    <img class="logo" src="/images/logo.svg" alt="store logo">
     <nav class="main-header__nav">
         <ul class="main-header__item-list">
             <li class="main-header__item">
-                <a class="<%= path === '/' ? 'active' : '' %>" href="/">Shop</a>
+                <a class="<%= path === '/' ? 'active' : '' %>" href="/">Home</a>
             </li>
             <li class="main-header__item">
-                <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Products</a>
+                <a class="<%= path === '/products' ? 'active' : '' %>" href="/products">Shop</a>
             </li>
            <% if (isAuthenticated) { %> 
                 <li class="main-header__item">
