--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -8,16 +8,20 @@
             <% if (orders.length <= 0) { %>
                 <h1>Nothing there!</h1>
             <% } else { %>
+                <h1 class="centered">Order History</h1>
                 <ul class="orders">
                     <% orders.forEach(order => { %>
                         <li class="orders__item">
                             <h1>Order - # <%= order._id %></h1>
+                            
                             <ul class="orders__products">
                                 <% order.products.forEach(p => { %>
-                                    <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>)</li>
+                                    <li class="orders__products-item"><%= p.product.title %> (<%= p.quantity %>) <%= p.productTotal %></li>
                                 <% }); %>
                             </ul>
+                            <h2>Order Total: <%= order.orderTotal%></h2>
                         </li>
+                        <hr>
                     <% }); %>
                 </ul>
             <% } %>
