--- a/public/css/cart.css
+++ b/public/css/cart.css
@@ -1,3 +1,4 @@
+
 .cart__item-list {
     list-style: none;
     margin: 0;
@@ -12,7 +13,6 @@
     align-items: center;
     justify-content: space-between;
     padding: 1rem;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
     margin-bottom: 1rem;
   }
   
@@ -21,4 +21,8 @@
     margin-right: 1rem;
     font-size: 1.2rem;
     margin: 0;
+  }
+
+  .total {
+    text-align: right;
   }
