--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,5 @@
- 
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto&family=Andada+Pro:wght@500&display=swap');
 
 * {
   box-sizing: border-box;
@@ -16,8 +16,44 @@ main {
   margin: auto;
 }
 
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Andada Pro', serif;
+}
+
 form {
   display: inline;
+}
+
+.logo {
+  height: 50px;
+
+}
+
+.hero {
+  margin: 0;
+  padding: 0;
+}
+
+.hero_img {
+  position: relative;
+  text-align: center;
+}
+
+.home-img{
+  height: auto;
+  width: 100%;
+  opacity: 80%;
+}
+
+.hero-img_text {
+  font-size: 2rem;
+  padding: 10px 10px 15px 10px;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: white;
+  text-shadow: 2px 2px #0d2038;
 }
 
 .centered {
@@ -27,7 +63,7 @@ form {
 .main-header {
   width: 100%;
   height: 3.5rem;
-  background-color: #0f8585;
+  background-color: #0d2038;
   padding: 0 1.5rem;
   display: flex;
   align-items: center;
@@ -68,7 +104,7 @@ form {
 .main-header__item a.active,
 .main-header__item button:hover,
 .main-header__item button:active {
-  color: #f59554;
+  color: #ddb224;
 }
 
 .mobile-nav {
@@ -112,7 +148,7 @@ form {
 .mobile-nav__item a:active,
 .mobile-nav__item a:hover,
 .mobile-nav__item a.active {
-  background: #0f8585;
+  background: #0d2038;
   color: white;
   border-radius: 3px;
 }
@@ -133,8 +169,8 @@ form {
 
 #side-menu-toggle:active,
 #side-menu-toggle:hover {
-  color: #f59554;
-  border-color: #f59554;
+  color: #ddb224;
+  border-color: #ddb224;
 }
 
 .backdrop {
@@ -154,9 +190,9 @@ h1 {
 
 .btn {
   font: inherit;
-  border: 1px solid #f59554;
+  border: 1px solid #ddb224;
   color: white;
-  background: #f59554;
+  background: #ddb224;
   border-radius: 3px;
   cursor: pointer;
   padding: .5rem;
@@ -169,7 +205,7 @@ a.btn {
 
 .btn:hover,
 .btn:active {
-  background-color: #dd6f25;
+  background-color: #e4af01;
   color: white;
 }
 
@@ -177,10 +213,15 @@ a.btn {
   text-align: center;
 }
 
+.hero-img_btn {
+  background-color: #0d2038;
+  border: #0d2038;
+}
+
 .user-message {
   margin: auto;
   width: 90%;
-  color: #dd6f25;
+  color:  #e4af01;
 }
 
 .user-message--error {
