--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -5,21 +5,25 @@
     <body>
         <%- include('../includes/navigation.ejs') %>
         <main>
+            <h1>Cart</h1>
             <% if (products.length > 0) { %>
                 <ul class="cart__item-list">
                     <% products.forEach(p => { %>
                         <li class="cart__item">
                             <h1><%= p.productId.title %></h1>
-                            <h2>Quantity: <%= p.quantity %></h2>
+                            <h2>Qty: <%= p.quantity %></h2>
+                            <h2> <%= p.productTotal %></h2>
                             <form action="/cart-delete-item" method="POST">
                                 <input type="hidden" value="<%= p.productId._id %>" name="productId">
                                 <input type="hidden" name="_csrf" value="<%= csrfToken %>"> 
                                 <button class="btn danger" type="submit">Delete</button>
                             </form>
                         </li>
+                        <hr>
                     <% }) %>
+                    <h2 class="total">Total: <%= cartTotal %></h2>
                 </ul>
-                <hr>
+                
                 <div class="centered">
                     <form action="/create-order" method="POST">
                         <input type="hidden" name="_csrf" value="<%= csrfToken %>"> 
