--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -5,35 +5,14 @@
 <body>
     <%- include('../includes/navigation.ejs') %>
 
-    <main>
-        <h1>Books</h1>
-        <% if (prods.length > 0) { %>
-            <div class="grid">
-                <% for (let product of prods) { %>
-                    <article class="card product-item">
-                        <header class="card__header">
-                            <h1 class="product__title"><%= product.title %></h1>
-                            <p class="product__author"><%= product.author %></p>
-                        </header>
-                        <div class="card__image">
-                            <img src="<%= product.imageUrl %>"
-                                alt="A Book">
-                        </div>
-                        <div class="card__content">
-                            <h2 class="product__price">$<%= product.price %></h2>
-                            <p class="product__description"><%= product.description %></p>
-                        </div>
-                        <div class="card__actions">
-                            <% if (isAuthenticated) { %>
-                                <%- include('../includes/add-to-cart.ejs', {product: product})%>
-                            <% } %>
-                        </div>
-                    </article>
-                <% } %>
+    <main class="hero">
+        <div class="hero_img">
+            <img class="home-img"src="/images/books.jpg" alt="wall of books" >
+            <div class="hero-img_text">
+                <h2>Your adventure awaits!</h2>
+                <a class="btn hero-img_btn" href="/products">Shop Now</a>
             </div>
-        <% } else { %>
-            <h1>No Books Found!</h1>
-        <% } %>  
+        </div>
     </main>
     
 <%- include('../includes/end.ejs')%>
