--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -5,9 +5,8 @@
 
 <body>
     <%- include('../includes/navigation.ejs') %>
-
     <main>
-        <h1>Books</h1>
+        <h1>Gently Used Books</h1>
         <% if (prods.length > 0) { %>
             <div class="grid">
                 <% for (let product of prods) { %>
