--- a/views/shop/json-products.ejs
+++ b/views/shop/json-products.ejs
@@ -6,14 +6,13 @@
 <body>
     <%- include('../includes/navigation.ejs') %>
     <main>
-        <h1>Gently Used Books</h1>
+        <h1>JSON Products</h1>
         <% if (prods.length > 0) { %>
             <div class="grid">
                 <% for (let product of prods) { %>
                     <article class="card product-item">
                         <header class="card__header">
                             <h1 class="product__title"><%= product.title %></h1>
-                            <p class="product__author"><%= product.author %></p>
                         </header>
                         <div class="card__image">
                             <img src="<%= product.imageUrl %>"
@@ -34,14 +33,17 @@
             </div>
             <section class="pagination">
                 <% if (currentPage !== 1) { %> 
-                    <a href="?page=1">1</a>
+                    <a href="?page=1">First</a>
                 <% } %>
-                <a href="?page=<%= currentPage %>" class="active"><%= currentPage %></a>
+                <% if (hasPreviousPage) { %>
+                    <a href="?page=<%= previousPage %>">Previous</a>
+                <% } %>
+                <a href="?page=<%= currentPage %>" class="active">Current</a>
                 <% if (hasNextPage) { %>
-                    <a href="?page=<%= nextPage %>"><%= nextPage %></a>
+                    <a href="?page=<%= nextPage %>">Next</a>
                 <% } %>
                 <% if (lastPage != currentPage && nextPage !== lastPage) { %>
-                    <a href="?page=<%= lastPage %>"><%= lastPage %></a>
+                    <a href="?page=<%= lastPage %>">Last</a>
                 <% } %>
 
             </section>
